[build-system]
requires = [
    "setuptools==80.9.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "docassemble.test444"
version = "0.0.1"
description = "A docassemble extension."
readme = "README.md"
authors = [
    { name = "Jonathan Pyle", email = "admin444@admin.com" },
]
dependencies = []

[project.urls]
Homepage = "https://docassemble.org"

[tool.setuptools.packages.find]
where = [
    ".",
]
